feat(form-molecule): add active style to reset borders on controls

--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -78,6 +78,12 @@ fieldset {
       font-size: .8rem;
       transform: translateY(-130%);
     }
+
+    .input,
+    .select,
+    .textarea {
+      @extend reset-border-color-input
+    }
   }
 
   .helper {
