--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -6,6 +6,11 @@ html(lang="pt-BR")
     meta(name="description" content="A front end library to help you make ​your​ grass greener than the other side")
     title #{title} | Garden
     
+    meta(property="og:image" content="http://styleguide.leroymerlin.com.br/images/banner.jpg")
+    meta(property="og:image:type" content="image/jpeg")
+    meta(property="og:image:width" content="1200")
+    meta(property="og:image:height" content="630")
+    
     link(rel="icon", href="images/favicon.png", type="image/png")
     link(rel="stylesheet", href="css/garden.min.css")
     link(rel="stylesheet", href="css/style.css")
