lint(unity): change property unity from px to rem

--- a/docs/css/atoms/container.css
+++ b/docs/css/atoms/container.css
@@ -2,7 +2,7 @@
   lost-utility: clearfix;
   margin-left: auto;
   margin-right: auto;
-  max-width: 1024px;
+  max-width: 64rem;
   overflow: auto;
   padding-left: 1.2em;
   padding-right: 1.2em;
