--- a/docs/css/molecules/highlight.css
+++ b/docs/css/molecules/highlight.css
@@ -1,8 +1,8 @@
 .highlight {
-  margin-top: 30px;
+  margin-top: 1.87rem;
 
   .img {
-    height: 120px;
+    height: 7.5rem;
     margin-left: auto;
     margin-right: auto;
   }
