--- a/docs/css/organisms/content.css
+++ b/docs/css/organisms/content.css
@@ -5,19 +5,19 @@
   }
 
   & > h2 {
-    margin-top: 60px;
+    margin-top: 3.75rem;
   }
 
   p code {
-    border-bottom: 1px solid $color-default-light;
-    border-radius: 2px;
+    border-bottom: .06rem solid $color-default-light;
+    border-radius: .12rem;
     color: $color-primary;
     display: inline-block;
   }
 
   .example-item {
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: .62rem;
+    margin-top: .62rem;
   }
 
   a,
