--- a/docs/css/organisms/example.css
+++ b/docs/css/organisms/example.css
@@ -1,7 +1,7 @@
 .example {
-  border: 1px solid $color-default-light;
-  border-radius: 3px;
-  padding: 15px 20px;
+  border: .06rem solid $color-default-light;
+  border-radius: .18rem;
+  padding: .93rem 1.25rem;
 
   h1,
   .heading-1,
@@ -15,7 +15,7 @@
   .heading-5,
   h6,
   .heading-6 {
-    margin: 10px 0;
+    margin: .62rem 0;
   }
 
   .row {
@@ -23,7 +23,7 @@
 
     div {
       background-color: $color-primary;
-      height: 30px;
+      height: 1.87rem;
     }
 
     .two {
@@ -40,8 +40,8 @@
   }
 
   .button {
-    margin-bottom: 10px;
-    margin-right: 15px;
+    margin-bottom: .62rem;
+    margin-right: .93rem;
 
     &:only-child,
     &:nth-last-child(4),
@@ -52,6 +52,15 @@
 
   .glyph {
     font-size: 2rem;
+  }
+
+  .thumbnail {
+    width: 13.8rem;
+
+    .button {
+      margin-right: 0;
+      width: 100%;
+    }
   }
 }
 
