--- a/docs/css/organisms/footer.css
+++ b/docs/css/organisms/footer.css
@@ -2,7 +2,7 @@
   color: $color-default;
   font-size: .8em;
   line-height: 1.4em;
-  margin-top: 20px;
+  margin-top: 1.25rem;
   text-align: center;
 }
 
