--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -1,18 +1,18 @@
 .button {
   background-color: $color-default;
   border: 0;
-  border-radius: 4px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .16), 0 2px 8px 0 rgba(0, 0, 0, .12);
+  border-radius: .25rem;
+  box-shadow: 0 .12rem .12rem 0 rgba(0, 0, 0, .16), 0 .12rem .5rem 0 rgba(0, 0, 0, .12);
   color: $color-neutral;
   display: inline-block;
   font-size: 1rem;
-  padding: 11px 13px;
+  padding: .68rem .81rem;
   transition: box-shadow .3s ease-in-out, transform .3s ease-in-out;
 
   &:hover,
   &:focus {
-    box-shadow: 0 20px 20px -10px rgba(0, 0, 0, .2), 0 4px 13px 0 rgba(0, 0, 0, .2);
-    transform: translateY(-1px);
+    box-shadow: 0 1.25rem 1.25rem -.62rem rgba(0, 0, 0, .2), 0 .25rem .81rem 0 rgba(0, 0, 0, .2);
+    transform: translateY(-.06rem);
   }
 
   &:focus{
