--- a/src/css/molecules/thumbnail.css
+++ b/src/css/molecules/thumbnail.css
@@ -10,29 +10,26 @@
     border-radius: .25rem;
   }
 
-  .caption {
-    margin-bottom: .62rem;
-    margin-top: .62rem;
-    text-align: center;
-  }
+  &-hover {
 
-  &::after {
-    border-radius: .25rem;
-    box-shadow: 0 0 1rem $color-default-light;
-    content: " ";
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    transition: opacity .3s ease-in-out;
-    width: 100%;
-    z-index: -1;
-  }
+    &::after {
+      border-radius: .25rem;
+      box-shadow: 0 0 1rem $color-default-light;
+      content: " ";
+      height: 100%;
+      left: 0;
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      transition: opacity .3s ease-in-out;
+      width: 100%;
+      z-index: -1;
+    }
 
-  &:hover::after,
-  &:focus::after {
-    opacity: 1;
+    &:hover::after,
+    &:focus::after {
+      opacity: 1;
+    }
   }
 }
 
