refactor(border): change border atom and update docs

--- a/src/css/atoms/border.css
+++ b/src/css/atoms/border.css
@@ -1,31 +1,30 @@
 .border {
   border: .0625rem solid $color-primary-light;
-}
 
-.border-hover {
-  border: .0625rem solid $color-primary-light;
-  transition: border-color .3s ease-in-out;
+  &-hover {
+    transition: border-color .3s ease-in-out;
 
-  &:hover {
-    border-color: $color-primary;
+    &:hover {
+      border-color: $color-primary;
+    }
   }
-}
 
-.border-active {
-  border: .0625rem solid $color-secondary;
-  transition: none;
-
-  &:hover {
+  &-active {
     border-color: $color-secondary;
+
+    transition: none;
+
+    &:hover {
+      border-color: $color-secondary;
+    }
   }
-}
 
-.border-disabled {
-  border: .0625rem solid $color-primary-light;
-  opacity: .4;
-  transition: none;
+  &-disabled {
+    opacity: .4;
+    transition: none;
 
-  &:hover {
-    border-color: $color-primary-light;
+    &:hover {
+      border-color: $color-primary-light;
+    }
   }
 }
