--- a/docs/layout/_partials/header.jade
+++ b/docs/layout/_partials/header.jade
@@ -1,9 +1,9 @@
 header.header
   .container
     a.logo(href="/")
-      img(src="images/garden-white.png", width="100")
+      img(src=root('images/garden-white.png'), width="100")
     nav.nav
       a.link(href="/about.html", class=path == 'about' ? "link-active" : undefined) About
       a.link(href="/getting-started.html", class=path == 'getting-started' ? "link-active" : undefined) Getting Started
-      a.link(href="/scaffolding.html", class=collection == 'css' ? "link-active" : undefined) CSS
-      a.link(href="/form-js.html", class=collection == 'js' ? "link-active" : undefined) JS
+      a.link(href="/css/scaffolding.html", class=collection == 'css' ? "link-active" : undefined) CSS
+      a.link(href="/js/form.html", class=collection == 'js' ? "link-active" : undefined) JS
