--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -3,21 +3,21 @@ html(lang="pt-BR")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    meta(name="description" content="A front end library to help you make ​your​ grass greener than the other side")
+    meta(name="description" content="A front end library to help you make your grass greener than the other side")
     title #{title} | Garden
-    
+
     meta(property="og:image" content="http://styleguide.leroymerlin.com.br/images/banner.jpg")
     meta(property="og:image:type" content="image/jpeg")
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
-    
-    link(rel="icon", href="images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="css/garden.min.css")
-    link(rel="stylesheet", href="css/style.css")
-    
+
+    link(rel="icon", href=root('images/favicon.png'), type="image/png")
+    link(rel="stylesheet", href=root('css/garden.min.css'))
+    link(rel="stylesheet", href=root('css/style.css'))
+
   body
     include _partials/header.jade
-    
+
     main.docs
       .container
         if sidebar
@@ -25,29 +25,29 @@ html(lang="pt-BR")
             each page in collections[collection]
               a.link(href="#{page.path}.html", class=title === page.title ? "link-active" : undefined) #{page.title}
         .content!= contents
-    
+
     include _partials/footer.jade
-    
+
     script(src="https://code.jquery.com/jquery-1.12.0.min.js")
-    script(src="js/garden.min.js")
+    script(src=root('js/garden.min.js'))
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
     script.
       new Clipboard('[data-copy]', {
         target: function(trigger) {
           return trigger.nextElementSibling;
-        }  
+        }
       });
-      
+
       var text = new Clipboard('[data-clipboard-text]');
-      
+
       text.on('success', function(e) {
         if (e.trigger.classList) {
           e.trigger.classList.add('copied');
-          
+
           setTimeout(function() {
             e.trigger.classList.remove('copied');
           }, 1000)
         }
       });
-      
+
       $('.docs').form();
