--- a/docs/styles/organisms/docs.css
+++ b/docs/styles/organisms/docs.css
@@ -103,6 +103,18 @@
       }
     }
   }
+
+  div[class*="col-"] {
+    color: $color-neutral;
+    margin-bottom: 10px;
+    text-align: center;
+
+    div {
+      background-color: $color-primary;
+      padding-bottom: 1rem;
+      padding-top: 1rem;
+    }
+  }
 }
 
 @media (--small) {
