--- a/src/css/atoms/grid.css
+++ b/src/css/atoms/grid.css
@@ -14,7 +14,7 @@
   margin-right: -calc($gutter-width / 2);
 }
 
-@each $breakpoint, $custom-media in (xs, sm, md, lg, xl), (--extra-small, --small, --medium, --large, --extra-large) {
+@each $breakpoint, $custom-media, $screen-size in (xs, sm, md, lg, xl), (--extra-small, --small, --medium, --large, --extra-large), (100%, calc($breakpoint-xs + 1px), calc($breakpoint-sm + 1px), calc($breakpoint-md + 1px), calc($breakpoint-lg + 1px)) {
 
   @for $column from 1 to 12 {
 
@@ -28,6 +28,10 @@
   }
 
   @media ($custom-media) {
+
+    .container {
+      width: $screen-size;
+    }
 
     @for $column from 1 to 12 {
 
