--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -5,33 +5,33 @@ html(lang="pt-BR")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(name="description" content="A front end library to help you make ​your​ grass greener than the other side")
     title Garden
-    
+
     meta(property="og:image" content="http://styleguide.leroymerlin.com.br/images/banner.jpg")
     meta(property="og:image:type" content="image/jpeg")
     meta(property="og:image:width" content="1200")
     meta(property="og:image:height" content="630")
-    
+
     link(rel="icon", href="images/favicon.png", type="image/png")
     link(rel="stylesheet", href="css/garden.min.css")
     link(rel="stylesheet", href="css/style.css")
-    
+
   body
     include _partials/header.jade
-    
+
     main.banner
       .container
         h1.title A front end library to help you make ​<strong>your</strong>​ grass greener than the other side
         a.btn(href="about.html") read about the project
-        
+
     section.content
       .container
-        .highlight.align-center
+        .col-xs-12.col-md-6.col-md-6.highlight.align-center
           img(src="images/mobile_first.svg", alt="Mobile First", class="img")
           h3.highlight-title Built to scale
           p  Garden was created from scratch following a scaling Mobile First approach for each component.
-        .highlight.align-center
+        .col-xs-12.col-md-6.highlight.align-center
           img(src="images/atomic.svg", alt="Atomic", class="img")
           h3.highlight-title Atomic
           p  Components were broken into atoms/molecules/organisms in order to create highly reusable code.
-    
+
     include _partials/footer.jade
