--- a/src/css/atoms/grid.css
+++ b/src/css/atoms/grid.css
@@ -46,6 +46,9 @@
       .col-$(breakpoint)-pull-$(column) {
         @mixin getSize $columns, $(column), right;
       }
+    }
+
+    @for $column from 0 to 12 {
 
       .col-$(breakpoint)-offset-$(column) {
         @mixin getSize $columns, $(column), margin-left;
