fix(css): remove extend usage

--- a/src/css/molecules/field.css
+++ b/src/css/molecules/field.css
@@ -82,7 +82,7 @@ fieldset {
     .input,
     .select,
     .textarea {
-      @extend reset-border-color-input
+      @mixin reset-border-color-input
     }
   }
 
