--- a/src/css/atoms/text/heading.css
+++ b/src/css/atoms/text/heading.css
@@ -1,8 +1,8 @@
-%heading-margin {
+@define-mixin heading-margin {
   margin-bottom: .625rem;
 }
 
-%heading-font {
+@define-mixin heading-font {
   font-family: inherit;
   font-weight: 500;
 }
@@ -10,36 +10,36 @@
 h1,
 .heading-1 {
   font-size: 2.5rem;
-  @extend %heading-font;
-  @extend %heading-margin;
+  @mixin heading-font;
+  @mixin heading-margin;
 }
 
 h2,
 .heading-2 {
   font-size: 1.875rem;
-  @extend %heading-font;
-  @extend %heading-margin;
+  @mixin heading-font;
+  @mixin heading-margin;
 }
 
 h3,
 .heading-3 {
   font-size: 1.5rem;
-  @extend %heading-font;
-  @extend %heading-margin;
+  @mixin heading-font;
+  @mixin heading-margin;
 }
 
 h4,
 .heading-4 {
   font-size: 1.25rem;
-  @extend %heading-font;
-  @extend %heading-margin;
+  @mixin heading-font;
+  @mixin heading-margin;
 }
 
 h5,
 .heading-5 {
   font-size: 1rem;
-  @extend %heading-font;
-  @extend %heading-margin;
+  @mixin heading-font;
+  @mixin heading-margin;
 }
 
 h6,
@@ -47,5 +47,5 @@ h6,
   font-family: inherit;
   font-size: 1rem;
   font-weight: 300;
-  @extend %heading-margin;
+  @mixin heading-margin;
 }
