feat(button-text): add button-text variant

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -49,4 +49,19 @@
   &-danger {
     background-color: $color-danger;
   }
+
+  &-text {
+    background-color: transparent;
+    box-shadow: none;
+    color: $color-primary;
+    padding: 0;
+    transition: none;
+
+    &:focus,
+    &:hover {
+      box-shadow: none;
+      text-decoration: underline;
+      transform: none;
+    }
+  }
 }
