--- a/src/css/utils/mixins.css
+++ b/src/css/utils/mixins.css
@@ -25,6 +25,8 @@
 
   &[disabled] {
     background-color: $color-neutral;
+    border-color: $color-default-light;
+    color: $color-default-light;
 
     &:hover {
       cursor: not-allowed;
