--- a/src/css/atoms/modal/close.css
+++ b/src/css/atoms/modal/close.css
@@ -2,6 +2,8 @@
   color: $color-primary;
   float: right;
   font-size: 1rem;
+  position: absolute;
+  right: 1rem;
   transition: color .3s ease-in-out;
 
   &:hover {
