--- a/src/css/atoms/modal/content.css
+++ b/src/css/atoms/modal/content.css
@@ -4,7 +4,9 @@
   box-shadow: 0 0 .3rem rgba(0, 0, 0, .5);
   display: none;
   left: 50%;
+  max-height: 90%;
   opacity: 0;
+  overflow: auto;
   padding-bottom: 1rem;
   padding-left: 1rem;
   padding-right: 1rem;
