feat(modal): change close button name

--- a/src/css/atoms/modal/close.css
+++ b/src/css/atoms/modal/close.css
@@ -1,10 +1,11 @@
-.close {
+.modal-close {
   color: $color-primary;
   float: right;
   font-size: 1rem;
   position: absolute;
   right: 1rem;
   transition: color .3s ease-in-out;
+  top: 1rem;
 
   &:hover {
     color: $color-primary-dark;
