--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -56,8 +56,12 @@ html(lang="pt-BR")
 
       $('.docs').form();
       
-      $('[data-modal]').modal()
+      var modal = $('[data-modal]').modal();
       
-      $('[data-trigger="open-modal"]').on('click', function() {
-        $('[data-modal]').data('modal').show();
+      $('[data-trigger="open"]').on('click', function() {
+        modal.data('modal').show();
+      });
+      
+      $('[data-trigger="close"]').on('click', function() {
+        modal.data('modal').hide();
       });
