--- a/docs/styles/organisms/docs.css
+++ b/docs/styles/organisms/docs.css
@@ -49,6 +49,10 @@
       border-radius: 0 0 .18rem .18rem;
       margin-top: 0;
     }
+
+    .notification {
+      margin-bottom: 0;
+    }
   }
 
   pre {
@@ -106,5 +110,9 @@
 
   .hide {
     display: none;
+  }
+
+  .notification {
+    margin-bottom: .6rem;
   }
 }
