--- a/src/css/atoms/notification/close.css
+++ b/src/css/atoms/notification/close.css
@@ -1,7 +1,9 @@
 .notification-close {
   color: $color-text;
   position: absolute;
-  right: .6rem;
+  right: .12rem;
+  top: 50%;
+  transform: translate(-50%, -.6rem);
 
   &:hover {
     cursor: pointer;
