chore(modal): change properties
Using form component inside modal cause a blurry effect in
everything inside it

--- a/src/css/atoms/modal.css
+++ b/src/css/atoms/modal.css
@@ -6,6 +6,14 @@
   width: 100%;
   z-index: $modal-index;
 
+  &::before {
+    content: " ";
+    display: inline-block;
+    height: 100%;
+    position: relative;
+    vertical-align: middle;
+  }
+
   &-enter {
     left: 0;
     position: fixed;
