--- a/src/css/atoms/form/select.css
+++ b/src/css/atoms/form/select.css
@@ -1,5 +1,5 @@
 .select {
-  @mixin form-component default-light, primary-dark {
+  @mixin form-component default, primary-dark {
     background-color: $color-neutral;
     font-size: 1.1rem;
     height: 2.5rem;
