feat(addon): update addon usage

--- a/src/css/molecules/addon.css
+++ b/src/css/molecules/addon.css
@@ -1,10 +1,25 @@
-.addon {
+.addon-left {
 
-  & + .input {
+  .input {
     padding-left: 2rem;
   }
 
-  & + .input + .label {
+  .input + .label {
     left: 2rem;
+  }
+}
+
+.addon-right {
+
+  .input {
+    padding-right: 2rem;
+  }
+
+  &.valid,
+  &.invalid {
+
+    .input {
+      padding-right: 3.2rem;
+    }
   }
 }
