--- a/src/css/utils/mixins.css
+++ b/src/css/utils/mixins.css
@@ -88,3 +88,16 @@
 @define-mixin push-pull-grid {
   position: relative;
 }
+
+@define-mixin disable-shadow {
+
+  &::after,
+  &::before {
+    content: none;
+  }
+
+  &:hover,
+  &:focus {
+    transform: none;
+  }
+}
