fix(button): create button-text disabled style

--- a/src/css/atoms/button.css
+++ b/src/css/atoms/button.css
@@ -93,5 +93,14 @@
     }
 
     @mixin disable-shadow;
+
+    &[disabled] {
+      background-color: transparent;
+      color: $color-default-light;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
   }
 }
