--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -76,3 +76,7 @@ html(lang="pt-BR")
         dynamic: false,
         closeButton: '[data-close="notification"]'
       });
+      
+      $('[data-trigger="scroll"]').on('click', function() {
+        $('#scroll').scroll();
+      });
