feat(collapse): add collapse component/spec docs

--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -80,3 +80,5 @@ html(lang="pt-BR")
       $('[data-trigger="scroll"]').on('click', function() {
         $('#scroll').scroll();
       });
+      
+      $('.toggle').collapse();
