feat(collapse): add collapse visible molecule

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -38,5 +38,6 @@
 @import "molecules/pricetag";
 @import "molecules/thumbnail";
 @import "molecules/feedback";
+@import "molecules/collapse";
 
 @import "molecules/panel";
