feat(gulpfile): remove babel hook from gulpfile/tasks

--- a/docs/layout/index.jade
+++ b/docs/layout/index.jade
@@ -12,8 +12,7 @@ html(lang="pt-BR")
     meta(property="og:image:height" content="630")
 
     link(rel="icon", href="images/favicon.png", type="image/png")
-    link(rel="stylesheet", href="css/garden.min.css")
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="assets/style.css")
 
   body
     include _partials/header.jade
