--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -12,8 +12,7 @@ html(lang="pt-BR")
     meta(property="og:image:height" content="630")
 
     link(rel="icon", href=root('images/favicon.png'), type="image/png")
-    link(rel="stylesheet", href=root('css/garden.min.css'))
-    link(rel="stylesheet", href=root('css/style.css'))
+    link(rel="stylesheet", href=root('assets/style.css'))
 
   body
     include _partials/header.jade
@@ -33,7 +32,7 @@ html(lang="pt-BR")
     include _partials/footer.jade
 
     script(src="https://code.jquery.com/jquery-1.12.0.min.js")
-    script(src=root('js/garden.min.js'))
+    script(src=root('assets/garden.min.js'))
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js")
     script.
       new Clipboard('[data-copy]', {
