feat(tooltip): add tooltip component
feat(tooltip): add brief description for tooltip component

feat(tooltip): add additional documentation for tooltip

feat(tooltip): add specs for tooltip component

--- a/src/css/garden.css
+++ b/src/css/garden.css
@@ -25,6 +25,7 @@
 @import "atoms/modal";
 @import "atoms/notification";
 @import "atoms/collapse";
+@import "atoms/tooltip";
 
 @import "atoms/form/input";
 @import "atoms/form/label";
