--- a/docs/layout/page.jade
+++ b/docs/layout/page.jade
@@ -54,15 +54,15 @@ html(lang="pt-BR")
       });
 
       $('.docs').form();
-      
+
       var modal = $('[data-modal]').modal({
         triggerClose: '[data-trigger="close"]'
       });
-      
+
       $('[data-trigger="open"]').on('click', function() {
         modal.data('modal').show();
       });
-      
+
       $('[data-notification-dynamic]').notification({
         message: 'foo bar',
         autoHide: true,
@@ -70,14 +70,16 @@ html(lang="pt-BR")
         hideIn: 20000,
         type: 'warning'
       });
-      
+
       $('[data-notification]').notification({
         dynamic: false,
         closeButton: '[data-close="notification"]'
       });
-      
+
       $('[data-trigger="scroll"]').on('click', function() {
         $('#scroll').scroll();
       });
-      
+
       $('.toggle').collapse();
+
+      $('[data-tooltip]').tooltip();
