feat(indexes) Use new indexes on model
- Drop useless modal-content z-index

--- a/src/css/atoms/modal.css
+++ b/src/css/atoms/modal.css
@@ -4,7 +4,7 @@
   opacity: 0;
   transition: opacity .3s ease-in-out;
   width: 100%;
-  z-index: $modal-index;
+  z-index: $index-foremost;
 
   &::before {
     content: " ";
