--- a/src/css/atoms/tooltip.css
+++ b/src/css/atoms/tooltip.css
@@ -7,9 +7,8 @@
   opacity: 0;
   padding: .5rem;
   position: absolute;
-  transition: all .5s ease;
+  transition: opacity .3s ease-in-out, visibility .6s;
   visibility: hidden;
-  z-index: 9999;
 
   &:parent:hover > .tooltip {
     opacity: 1;
@@ -26,7 +25,7 @@
   }
 
   &[x-placement^="top"] {
-    margin-bottom: 7px;
+    margin-bottom: 10px;
   }
 
   &[x-placement^="top"] .tooltip-arrow {
@@ -39,7 +38,7 @@
   }
 
   &[x-placement^="bottom"] {
-    margin-top: 7px;
+    margin-top: 10px;
   }
 
   &[x-placement^="bottom"] .tooltip-arrow {
@@ -52,7 +51,7 @@
   }
 
   &[x-placement^="right"] {
-    margin-left: 7px;
+    margin-left: 10px;
   }
 
   &[x-placement^="right"] .tooltip-arrow {
@@ -65,7 +64,7 @@
   }
 
   &[x-placement^="left"] {
-    margin-right: 7px;
+    margin-right: 10px;
   }
 
   &[x-placement^="left"] .tooltip-arrow {
