--- a/src/css/atoms/tooltip.css
+++ b/src/css/atoms/tooltip.css
@@ -17,28 +17,28 @@
 
   .tooltip-arrow {
     border-style: solid;
-    border-width: 7px;
+    border-width: .5rem;
     height: 0;
-    margin: 7px;
+    margin: .5rem;
     position: absolute;
     width: 0;
   }
 
   &[x-placement^="top"] {
-    margin-bottom: 10px;
+    margin-bottom: .75rem;
   }
 
   &[x-placement^="top"] .tooltip-arrow {
     border-bottom-width: 0;
     border-color: $color-primary transparent transparent transparent;
-    bottom: -7px;
+    bottom: -.5rem;
     left: calc(50% - 14px);
     margin-bottom: 0;
     margin-top: 0;
   }
 
   &[x-placement^="bottom"] {
-    margin-top: 10px;
+    margin-top: .75rem;
   }
 
   &[x-placement^="bottom"] .tooltip-arrow {
@@ -47,33 +47,33 @@
     left: calc(50% - 14px);
     margin-bottom: 0;
     margin-top: 0;
-    top: -7px;
+    top: -.5rem;
   }
 
   &[x-placement^="right"] {
-    margin-left: 10px;
+    margin-left: .75rem;
   }
 
   &[x-placement^="right"] .tooltip-arrow {
     border-color: transparent $color-primary transparent transparent;
-    border-width: 7px 7px 7px 0;
-    left: -7px;
+    border-width: .5rem .5rem .5rem 0;
+    left: -.5rem;
     margin-left: 0;
     margin-right: 0;
-    top: calc(70% - 7px);
+    top: calc(70% - .5rem);
   }
 
   &[x-placement^="left"] {
-    margin-right: 10px;
+    margin-right: .75rem;
   }
 
   &[x-placement^="left"] .tooltip-arrow {
     border-color: transparent transparent transparent $color-primary;
-    border-width: 7px 0 7px 7px;
+    border-width: .5rem 0 .5rem .5rem;
     margin-left: 0;
     margin-right: 0;
-    right: -7px;
-    top: calc(70% - 7px);
+    right: -.5rem;
+    top: calc(70% - .5rem);
   }
 }
 
